Version 3.2.0     24 Aug 2019

	* Migrate to GitHub now that BitBucket no longer supports Mercurial repositories.

Version 3.1.12    12 Nov 2017

	* Fix MANIFEST.in so that all API documentation is included in tarball.

Version 3.1.11    12 Nov 2017

	* Convert API documentation from Epydoc to Sphinx Napolean (Google docstrings).

Version 3.1.10    11 Sep 2017

	* Fix maintainer script util/validate to use onsgmls from the opensp package.
	* Add information to the user manual about how to lock down the Amazon S3 user.

Version 3.1.9     03 Jul 2017

	* Fix issues discovered with peer test changes when backporting to CedarBackup2.

Version 3.1.8     02 Jul 2017

	* Add options in util/test.py to get better output from unit tests.
	* Update Python virtualenv setup to work with Python 3.5 and recent pip.
	* Make various adjustments to remote peer tests, to make them safer and more robust.
	* Fix problems discovered with the awscli version in Debian stretch.

Version 3.1.7     21 Jun 2016

	* Fix typo in cback.1, noticed by Debian's Lintian checks.
	* Fix logging errors with odd paths in tools/amazons3.py when ascii encoding is set.

Version 3.1.6     13 Feb 2016

	* Fix bug in the file encoding checks for the amazons3sync tool.

Version 3.1.5     02 Jan 2016

	* Fix or disable a variety of new warnings and suggestions from pylint.

Version 3.1.4     11 Aug 2015

	* Improvements based on testing in the Debian continuous integration environment.
	  - Make the logging setup process obey the --stack command-line option 
	  - Fix logging setup to always create the log file with the proper specified mode
	  - Fix PurgeItemList.removeYoungFiles() so ageInWholeDays can never be negative
	  - Make filesystemtests more portable, with maximum file path always <= 255 bytes

Version 3.1.1     04 Aug 2015

	* Fix incorrect exception raise without % in util.py, found by accident.
	* Fix cut-and-paste typo 'iplemented' in cli.py, config.py, and util.py.