@@ -65,7 +65,7 @@ load-plugins=
 #enable-msg=
 
 # Disable the message(s) with the given id(s).
-disable=I0011,W0702,W0703,W0704,C0302,C0321,R0902,R0911,R0912,R0913,R0914,R0915,R0801,C0326,R0101,R0102,R0916,C0113,C0305,R1705,C1801
+disable=I0011,W0702,W0703,W0704,C0302,C0321,R0902,R0911,R0912,R0913,R0914,R0915,R0801,C0326,R0101,R0102,R0916,C0113,C0305,R1705,C1801,R1720,W0107,R1717,R1711,R1714,R0205
 
 
 [REPORTS]
