@@ -1,6 +1,7 @@
 Version 3.2.0     24 Aug 2019
 
 	* Migrate to GitHub now that BitBucket no longer supports Mercurial repositories.
+	* Handle new warnings from PyLint 2.3.1.
 
 Version 3.1.12    12 Nov 2017
 
